# transporter

./: README.md
Transporter_Central_Server_NoProcessing_NoAudio_Queue/: CMakeLists.txt  main  main.cpp
Transporter_Client_NoAudio_Queue/app/: build.gradle  proguard-rules.pro
Transporter_Client_NoAudio_Queue/app/src/androidTest/java/com/example/trihuynh/transporter_client/: ApplicationTest.java
Transporter_Client_NoAudio_Queue/app/src/main/: AndroidManifest.xml
Transporter_Client_NoAudio_Queue/app/src/main/java/com/example/trihuynh/transporter_client/: CamViewActivity.java  MainActivity.java
Transporter_Client_NoAudio_Queue/app/src/main/res/layout/: activity_cam_view.xml  activity_main.xml
Transporter_Client_NoAudio_Queue/app/src/main/res/menu/: menu_cam_view.xml
Transporter_Client_NoAudio_Queue/app/src/main/res/values/: strings.xml
Transporter_Server_Android_Processing_NoAudio_Queue/: settings.gradle
Transporter_Server_Android_Processing_NoAudio_Queue/app/: build.gradle
Transporter_Server_Android_Processing_NoAudio_Queue/app/src/main/: AndroidManifest.xml
Transporter_Server_Android_Processing_NoAudio_Queue/app/src/main/res/layout/: activity_cam_view.xml  activity_main.xml
Transporter_Server_Android_Processing_NoAudio_Queue/app/src/main/res/menu/: menu_cam_view.xml
Transporter_Server_Android_Processing_NoAudio_Queue/app/src/main/res/values/: strings.xml
Transporter_Server_Android_Processing_NoAudio_Queue/opencv-app/: build.gradle
board/: CMakeLists.txt  transporter_noaudio_timer_webcams_queue.cpp
(+3 files in other folders)
